// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish Test File via Babel: cjs 1`] = `
"/*! esnext-assets v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
'use strict';

var imageUrl = require('./bXipeBrs.png');
var contentUrl = require('./bsdudxaF.md');
var styleUrl = require('./ABCYSDdq.css');

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e['default'] : e; }

var imageUrl__default = /*#__PURE__*/_interopDefaultLegacy(imageUrl);
var contentUrl__default = /*#__PURE__*/_interopDefaultLegacy(contentUrl);
var styleUrl__default = /*#__PURE__*/_interopDefaultLegacy(styleUrl);

console.log(\`Logo-URL is \${imageUrl__default}\`);
console.log(\`Content-URL is \${contentUrl__default}\`);
console.log(\`Style-URL is \${styleUrl__default}\`);
//# sourceMappingURL=index.cjs.js.map
"
`;

exports[`Publish Test File via Babel: esm 1`] = `
"/*! esnext-assets v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
import imageUrl from './bXipeBrs.png';
import contentUrl from './bsdudxaF.md';
import styleUrl from './ABCYSDdq.css';

console.log(\`Logo-URL is \${imageUrl}\`);
console.log(\`Content-URL is \${contentUrl}\`);
console.log(\`Style-URL is \${styleUrl}\`);
//# sourceMappingURL=index.esm.js.map
"
`;

exports[`Publish Test File via Babel: umd 1`] = `
"/*! esnext-assets v1.0.0 by Sebastian Werner <s.werner@sebastian-software.de> */
(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? factory(require('./bXipeBrs.png'), require('./bsdudxaF.md'), require('./ABCYSDdq.css')) :
	typeof define === 'function' && define.amd ? define(['./bXipeBrs.png', './bsdudxaF.md', './ABCYSDdq.css'], factory) :
	(global = typeof globalThis !== 'undefined' ? globalThis : global || self, factory(global.imageUrl, global.contentUrl, global.styleUrl));
}(this, (function (imageUrl, contentUrl, styleUrl) { 'use strict';

	function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e['default'] : e; }

	var imageUrl__default = /*#__PURE__*/_interopDefaultLegacy(imageUrl);
	var contentUrl__default = /*#__PURE__*/_interopDefaultLegacy(contentUrl);
	var styleUrl__default = /*#__PURE__*/_interopDefaultLegacy(styleUrl);

	console.log(\`Logo-URL is \${imageUrl__default}\`);
	console.log(\`Content-URL is \${contentUrl__default}\`);
	console.log(\`Style-URL is \${styleUrl__default}\`);

})));
//# sourceMappingURL=index.umd.js.map
"
`;

exports[`Publish Test File via Babel: umd 2`] = `
"body {
  font-size: 20px;
  background: url(./VyVNPqgN.woff) top left repeat;
}

/*# sourceMappingURL=ABCYSDdq.css.map */"
`;
